# smart-switch

./: .gitignore  LICENSE
hardware/: Iot_switch.PrjPcb  Iot_switch.PrjPcbStructure  Iot_switch.SCHLIB  Iot_switch.SchDoc
smart-switch/: CMakeLists.txt  partitions_hap.csv  sdkconfig  sdkconfig.old
smart-switch/device/device_manage/: device.c  energy_statistics.c  power_protection.c  switch_control.c  temperature_protection.c
smart-switch/device/device_manage/include/: device.h  energy_statistics.h  power_protection.h  switch_control.h  temperature_protection.h
smart-switch/device/drivers/: button.c  hlw.c  led.c  ntc.c  oled.c  relay.c  system_time.c
smart-switch/device/drivers/include/: button.h  hlw.h  led.h  ntc.h  oled.h  oledfont.h  relay.h  system_time.h
smart-switch/device/hal/include/: power_sensor.h
smart-switch/device/platform/: ha_switch.c
smart-switch/device/platform/include/: ha_switch.h
smart-switch/device/wifi_manage/: dns_server.c  http_server.c  spiffs.c  web_server.c  wifi_manage.c
smart-switch/device/wifi_manage/include/: dns_server.h  http_server.h  spiffs.h  web_server.h  wifi_manage.h
smart-switch/front/: index.html  package-lock.json  package.json  vite.config.js
smart-switch/front/src/: App.vue  main.js  router.js
smart-switch/front/src/api/: apiService.js
smart-switch/front/src/components/: DatePickerPage.vue  DeviceInfo.vue  DeviceReset.vue  DeviceSettings.vue  DeviceSubSettings.vue  EnergyChart.vue  EnergyStatistics.vue  GaugeChart.vue  Home.vue  (+4 more)
smart-switch/main/: CMakeLists.txt  app_main.c  idf_component.yml
(+5 files in other folders)
